feat: Блокирование кнопки Купить при недостаточности средств
