# online-store/src/main/java/ru/goncharenko/market/payment/model/PaymentStatus.java
@@ -1,0 +1,165 @@
+/*
+ * Payment API
+ * Сервис совершения платежей
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package ru.goncharenko.market.payment.model;
+
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+
+import java.util.Objects;
+
+/**
+ * PaymentStatus
+ */
+@JsonPropertyOrder({
+  PaymentStatus.JSON_PROPERTY_MESSAGE,
+  PaymentStatus.JSON_PROPERTY_PROCESSED,
+  PaymentStatus.JSON_PROPERTY_CODE
+})
+@jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", date = "2026-03-10T20:48:17.154035700+03:00[GMT+03:00]", comments = "Generator version: 7.20.0")
+public class PaymentStatus {
+  public static final String JSON_PROPERTY_MESSAGE = "message";
+  @jakarta.annotation.Nullable
+  private String message;
+
+  public static final String JSON_PROPERTY_PROCESSED = "processed";
+  @jakarta.annotation.Nullable
+  private Boolean processed;
+
+  public static final String JSON_PROPERTY_CODE = "code";
+  @jakarta.annotation.Nullable
+  private Integer code;
+
+  public PaymentStatus() {
+  }
+
+  public PaymentStatus message(@jakarta.annotation.Nullable String message) {
+    
+    this.message = message;
+    return this;
+  }
+
+  /**
+   * Get message
+   * @return message
+   */
+  @jakarta.annotation.Nullable
+  @JsonProperty(value = JSON_PROPERTY_MESSAGE, required = false)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+
+  public String getMessage() {
+    return message;
+  }
+
+
+  @JsonProperty(value = JSON_PROPERTY_MESSAGE, required = false)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+  public void setMessage(@jakarta.annotation.Nullable String message) {
+    this.message = message;
+  }
+
+  public PaymentStatus processed(@jakarta.annotation.Nullable Boolean processed) {
+    
+    this.processed = processed;
+    return this;
+  }
+
+  /**
+   * Get processed
+   * @return processed
+   */
+  @jakarta.annotation.Nullable
+  @JsonProperty(value = JSON_PROPERTY_PROCESSED, required = false)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+
+  public Boolean getProcessed() {
+    return processed;
+  }
+
+
+  @JsonProperty(value = JSON_PROPERTY_PROCESSED, required = false)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+  public void setProcessed(@jakarta.annotation.Nullable Boolean processed) {
+    this.processed = processed;
+  }
+
+  public PaymentStatus code(@jakarta.annotation.Nullable Integer code) {
+    
+    this.code = code;
+    return this;
+  }
+
+  /**
+   * Get code
+   * @return code
+   */
+  @jakarta.annotation.Nullable
+  @JsonProperty(value = JSON_PROPERTY_CODE, required = false)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+
+  public Integer getCode() {
+    return code;
+  }
+
+
+  @JsonProperty(value = JSON_PROPERTY_CODE, required = false)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+  public void setCode(@jakarta.annotation.Nullable Integer code) {
+    this.code = code;
+  }
+
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    PaymentStatus paymentStatus = (PaymentStatus) o;
+    return Objects.equals(this.message, paymentStatus.message) &&
+        Objects.equals(this.processed, paymentStatus.processed) &&
+        Objects.equals(this.code, paymentStatus.code);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(message, processed, code);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class PaymentStatus {\n");
+    sb.append("    message: ").append(toIndentedString(message)).append("\n");
+    sb.append("    processed: ").append(toIndentedString(processed)).append("\n");
+    sb.append("    code: ").append(toIndentedString(code)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
